Make template mobile-friendly meta tag

--- a/src/nostalgic-cafe/index.html
+++ b/src/nostalgic-cafe/index.html
@@ -5,6 +5,7 @@
     {{# with meta}}
     <meta name="description" content="{{{description}}}">
     <meta name="keywords" content="{{{keywords}}}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ ../scene.title }} | {{ title }}</title>
     {{/ with}}
     <link rel="stylesheet" href="style.css">
