Update live website

--- a/nostalgic-cafe/index.html
+++ b/nostalgic-cafe/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <script src="https://w.soundcloud.com/player/api.js"></script>
+    <script src="../lib/animated-textblock.js"></script>
   </head>
   <body>
     <div id="overlay">
@@ -51,6 +52,20 @@
                 width="499" 
                 height="100"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/432194148&visual=false&buying=false&sharing=false&download=true&auto_play=false&show_playcount=false&show_user=false&show_artwork=false&color=%23422338"></iframe>
+            </div>
+            <div class="texts">
+              <div data-t="26" data-duration="14" class="textbox textbox--hidden">Light me up a cigarette<br>and put it in my mouth<br>You're the only one<br>that wants me around</div>
+              <div data-t="38" data-duration="14" class="textbox textbox--hidden">And I can think of<br>a thousand reasons why<br>I don't believe in you,<br>I don't believe in you and I</div>
+              <div data-t="52" data-duration="14" class="textbox textbox--hidden">Light me up a cigarette<br>and put it in my mouth<br>You're the only one<br>that wants me to die</div>
+              <div data-t="66" data-duration="14" class="textbox textbox--hidden">And I can think of<br>a thousand reasons why,<br>I don't believe in you,<br>I don't believe in you</div>
+              <div data-t="78" data-duration="14" class="textbox textbox--hidden">Light me up a cigarette<br>and put it in my mouth<br>You're the only one<br>that wants me around</div>
+              <div data-t="94" data-duration="14" class="textbox textbox--hidden">Light me up a cigarette<br>and put it in my mouth<br>You're the only one<br>that wants me around</div>
+              <div data-t="106" data-duration="14" class="textbox textbox--hidden">And I can think of<br>a thousand reasons why,<br>I don't believe in you,<br>I don't believe in you and I</div>
+              <div data-t="118" data-duration="11" class="textbox textbox--hidden">Light me up a cigarette<br>and put it in my mouth<br>You're the only one<br>that wants me to die</div>
+              <div data-t="132" data-duration="14" class="textbox textbox--hidden">And I can think of<br>a thousand reasons why,<br>I don't believe in you,<br>I don't believe in you</div>
+              <div data-t="150" data-duration="9" class="textbox textbox--hidden">I'm not yours anymore<br>I'm not yours anymore</div>
+              <div data-t="159" data-duration="8" class="textbox textbox--hidden">No, I..., I'm not yours anymore</div>
+              <div data-t="168" data-duration="4" class="textbox textbox--hidden">I'm not yours anymore</div>
             </div>
           </div>
           <div class="track"
@@ -128,6 +143,12 @@
                 height="100"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/376278734&visual=false&buying=false&sharing=false&download=true&auto_play=false&show_playcount=false&show_user=false&show_artwork=false&color=%23422338"></iframe>
             </div>
+            <div class="texts">
+              <div data-t="44" data-duration="6" class="textbox textbox--hidden">I don't know who I am,<br>unless I know who you are</div>
+              <div data-t="49" data-duration="6" class="textbox textbox--hidden">And you don't know who you are,<br>unless you know who I am</div>
+              <div data-t="54" data-duration="5" class="textbox textbox--hidden">In other words,<br>we are not separate</div>
+              <div data-t="79" data-duration="13" class="textbox textbox--hidden">As a wise rabi once said,<br>if I am I because you are you<br>and you are you because I am I<br>then I am not I and you are not you</div>
+            </div>
           </div>
           <div class="track"
             data-id="347701617"
@@ -203,6 +224,16 @@
                 width="499" 
                 height="100"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/365433710&visual=false&buying=false&sharing=false&download=true&auto_play=false&show_playcount=false&show_user=false&show_artwork=false&color=%23422338"></iframe>
+            </div>
+            <div class="texts">
+              <div data-t="40" data-duration="6" class="textbox textbox--hidden">More than just missin'<br>You're here but you don't listen<br>A tensio-ooon</div>
+              <div data-t="45" data-duration="6" class="textbox textbox--hidden">More than just a tension<br>You're here but you don't listen</div>
+              <div data-t="50" data-duration="6" class="textbox textbox--hidden">More than just missin'<br>You're here but you don't listen<br>A tensio-ooon</div>
+              <div data-t="55" data-duration="6" class="textbox textbox--hidden">More than just a tension<br>You're here but you don't listen</div>
+              <div data-t="81" data-duration="6" class="textbox textbox--hidden">More than just missin'<br>You're here but you don't listen<br>A tensio-ooon</div>
+              <div data-t="85" data-duration="6" class="textbox textbox--hidden">More than just a tension<br>You're here but you don't listen</div>
+              <div data-t="91" data-duration="6" class="textbox textbox--hidden">More than just missin'<br>You're here but you don't listen<br>A tensio-ooon</div>
+              <div data-t="96" data-duration="6" class="textbox textbox--hidden">More than just a tension<br>You're here but you don't listen</div>
             </div>
           </div>
         </div>
